welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:25: error: value bleu is not a member of object java.awt.Color
  	symboleDeux(Color.bleu);
                          ^