welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  def symboleUn(c: Color) {
    setCouleurBrosse(c)
    for (k <- 1 to 2) {
    avance();
  	peindre();
  	gauche();
  	avance();
  	gauche();
    }
  }
  def symboleDeux(c: Color) {
    setCouleurBrosse(c)
    for (k <- 1 to 2) {
    	peindre();
  		avance();
  		gauche();
  		avance();
    	gauche();
    }
  }
  def motif() {
  	symboleUn(Color.red);
  	avance(2);
  	symboleDeux(Color.bleu);
  	recule(2);
  	gauche();
  	avance(2);
  	droite();
  	symboleDeux(Color.yellow);
  	avance(2);
  	symboleUn(Color.green);
  	recule(2);
  	gauche();
  	recule(2);
  	droite();
  }
  for (i <- 1 to 2) {
    for (j <- 1 to 2) {
      motif()
      avance(4);
    }
    droite();
    avance(4);
    gauche();
  }
}

def peindre() {
    baisseBrosse();
    leveBrosse();
  }